--- a/src/Mzayad.Web/Views/User/EditProfile.cshtml
+++ b/src/Mzayad.Web/Views/User/EditProfile.cshtml
@@ -36,7 +36,12 @@
                 </div>
                 <div class="form-group">
                     <label>@Global.ProfileURL</label>
-                    @Html.TextBoxFor(i => i.User.ProfileUrl, new { @class = "form-control", @readonly = true })
+                    @Html.TextBoxFor(i => i.User.ProfileUrl, new {@class = "form-control", @readonly = true})
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(i=>i.User.Gender,Global.Gender)
+                    @Html.RadioButtonList("User.Gender",Model.GenderList)
                 </div>
 
                 <div class="form-group">
