MZ-166 fix layout header direction

--- a/src/Mzayad.Web/Content/site-arabic.less
+++ b/src/Mzayad.Web/Content/site-arabic.less
@@ -15,7 +15,7 @@
     }
 
     .navbar-right {
-        float: left !important;
+        /*float: left !important;*/
     }
 
     .navbar-toggle {
@@ -30,7 +30,7 @@
         }
 
         .navbar-right {
-            margin-right: 0;
+            /*margin-right: 0;*/
             margin-left: -15px;     
         }
 
@@ -94,5 +94,9 @@
         &:last-child {
             border-right: 0;
         }
+    }
+
+    #header-subscription{
+        float:left !important;
     }
 }
