--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -514,80 +514,6 @@ input[type="checkbox"].input-validation-error {
 .td-total {
   text-align: right;
 }
-:lang(ar) body {
-  font-size: 1.6rem;
-}
-:lang(ar) .nav {
-  padding-right: 0;
-}
-:lang(ar) .navbar-brand {
-  float: right !important;
-}
-:lang(ar) .navbar-right {
-  float: left !important;
-}
-:lang(ar) .navbar-toggle {
-  float: left !important;
-}
-@media (min-width: 768px) {
-  :lang(ar) .navbar-brand {
-    margin-left: 0;
-    margin-right: -15px;
-  }
-  :lang(ar) .navbar-right {
-    margin-right: 0;
-    margin-left: -15px;
-  }
-  :lang(ar) .navbar-header {
-    float: right !important;
-  }
-  :lang(ar) .navbar-nav > li {
-    float: right;
-  }
-  :lang(ar) .navbar-right .dropdown-menu {
-    right: auto;
-    left: 0;
-  }
-}
-:lang(ar) .dropdown-menu {
-  text-align: right;
-}
-:lang(ar) .fa-pad-left {
-  padding-left: 0;
-  padding-right: 4px;
-}
-:lang(ar) .fa-pad-right {
-  padding-left: 4px;
-  padding-right: 0;
-}
-:lang(ar) .fa-fw.fa-pad-right {
-  margin-left: 6px;
-  margin-right: 0;
-}
-:lang(ar) .radio label,
-:lang(ar) .checkbox label {
-  padding-right: 20px;
-  padding-left: 0;
-}
-:lang(ar) .radio input[type="radio"],
-:lang(ar) .radio-inline input[type="radio"],
-:lang(ar) .checkbox input[type="checkbox"],
-:lang(ar) .checkbox-inline input[type="checkbox"] {
-  margin-right: -20px;
-  margin-left: 0;
-}
-:lang(ar) .close {
-  float: left;
-}
-:lang(ar) .input-group-addon {
-  border: 1px solid #ccc;
-}
-:lang(ar) .input-group-addon:first-child {
-  border-left: 0;
-}
-:lang(ar) .input-group-addon:last-child {
-  border-right: 0;
-}
 #home-index #page-title {
   display: none;
 }
@@ -948,4 +874,81 @@ input[type="checkbox"].input-validation-error {
   .dashboard-flex-list li {
     width: 12.5%;
   }
+}
+:lang(ar) body {
+  font-size: 1.6rem;
+}
+:lang(ar) .nav {
+  padding-right: 0;
+}
+:lang(ar) .navbar-brand {
+  float: right !important;
+}
+:lang(ar) .navbar-right {
+  /*float: left !important;*/
+}
+:lang(ar) .navbar-toggle {
+  float: left !important;
+}
+@media (min-width: 768px) {
+  :lang(ar) .navbar-brand {
+    margin-left: 0;
+    margin-right: -15px;
+  }
+  :lang(ar) .navbar-right {
+    /*margin-right: 0;*/
+    margin-left: -15px;
+  }
+  :lang(ar) .navbar-header {
+    float: right !important;
+  }
+  :lang(ar) .navbar-nav > li {
+    float: right;
+  }
+  :lang(ar) .navbar-right .dropdown-menu {
+    right: auto;
+    left: 0;
+  }
+}
+:lang(ar) .dropdown-menu {
+  text-align: right;
+}
+:lang(ar) .fa-pad-left {
+  padding-left: 0;
+  padding-right: 4px;
+}
+:lang(ar) .fa-pad-right {
+  padding-left: 4px;
+  padding-right: 0;
+}
+:lang(ar) .fa-fw.fa-pad-right {
+  margin-left: 6px;
+  margin-right: 0;
+}
+:lang(ar) .radio label,
+:lang(ar) .checkbox label {
+  padding-right: 20px;
+  padding-left: 0;
+}
+:lang(ar) .radio input[type="radio"],
+:lang(ar) .radio-inline input[type="radio"],
+:lang(ar) .checkbox input[type="checkbox"],
+:lang(ar) .checkbox-inline input[type="checkbox"] {
+  margin-right: -20px;
+  margin-left: 0;
+}
+:lang(ar) .close {
+  float: left;
+}
+:lang(ar) .input-group-addon {
+  border: 1px solid #ccc;
+}
+:lang(ar) .input-group-addon:first-child {
+  border-left: 0;
+}
+:lang(ar) .input-group-addon:last-child {
+  border-right: 0;
+}
+:lang(ar) #header-subscription {
+  float: left !important;
 }
