--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         </button>
         <a href="@Url.Action("Index", "Home", routeValues)" class="navbar-brand text-uppercase">Zeedli</a>
         <nav class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right navbar-user">
+            <ul class="@(Html.IsArabic() ? "nav navbar-nav navbar-left navbar-user" : "nav navbar-nav navbar-right navbar-user")">
                 @Html.Partial("_Layout_UserMyAccount")
                 @Html.Partial("_Layout_LanguageSelector")
             </ul>
@@ -57,7 +57,7 @@
     <div class="container">
         @Html.Action("SubscriptionStatus", "Home", new { area = "" })
         <nav class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-left navbar-main">
+            <ul class="@(Html.IsArabic() ? "nav navbar-nav navbar-right navbar-main" : "nav navbar-nav navbar-left navbar-main")">
                 <li>@Html.ActionLink(Global.Home, "Index", "Home", routeValues, null)</li>
                 <li>@Html.ActionLink(Global.HowItWorks, "Index", "Pages", new { Area = "", Language = LanguageCode, Slug = "how-it-works"}, null)</li>
                 <li>@Html.ActionLink(Global.BuyNow, "BuyNow", "Home", routeValues, null)</li>
