MZ-167 added delete auction

--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Edit.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "Edit Auction";
 }
 
+<ul class="link-list">
+    <li><a href="@Url.Action("Delete", "Auctions", new {id = @Model.Auction.AuctionId})">Delete Auction</a></li>
+</ul>
+
 @Html.Partial("_AddEditAuction")
 
 @section scripts {
