MZ-169 add feature to delete product and edit product service to exclude deleted products

--- a/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
@@ -51,6 +51,10 @@
 
     <div class="@Html.Css().FormWide">
 
+        <ul class="link-list">
+            <li><a href="@Url.Action("Delete", "Products", new {id = @Model.Product.ProductId})">Delete Product</a></li>
+        </ul>
+
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
