MZ-172 view auctions with buy now enabled on buy now page

--- a/src/Mzayad.Web/Views/Home/BuyNow.cshtml
+++ b/src/Mzayad.Web/Views/Home/BuyNow.cshtml
@@ -1,5 +1,12 @@
-﻿
+﻿@model IReadOnlyCollection<Mzayad.Models.Auction>
+
 @{
     ViewBag.Title = Global.BuyNow;
 }
 
+<ol id="closed-auctions">
+    @foreach (var auction in Model)
+    {
+        <li>@Html.DisplayFor(i => auction, "BuyNowTile")</li>
+    }
+</ol>
