--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -1,7 +1,6 @@
 ﻿@import url("variables");
 
 body {
-    padding-top: 135px;
     padding-bottom: 20px;
 }
 
@@ -22,12 +21,27 @@ body {
         }
     }
 
-    .navbar-nav>.open>a, 
-    .navbar-nav>.open>a:focus, 
-    .navbar-nav>.open>a:hover {
+    .navbar-nav > .open > a,
+    .navbar-nav > .open > a:focus,
+    .navbar-nav > .open > a:hover {
         background-color: #f5f5f5;
         background-image: none;
         box-shadow: none;
+    }
+
+    .navbar-toggle {
+        margin-left: 0;
+        margin-right: 0;
+
+        .icon-bar {
+            background-color: #333;
+        }
+
+        &:hover, &:focus, &:active {
+            .icon-bar {
+                background-color: #fff;
+            }
+        }
     }
 }
 
@@ -40,39 +54,20 @@ body {
 }
 
 .navbar-brand {
+    display: block;
     height: auto;
-    font-size: 3rem;
-    font-weight: bold;
-    line-height: 100%;
-    padding-top: 30px;
-    padding-bottom: 15px;
 }
 
-.navbar-main {
-    > li > a {
-        font-size: 1.5rem;
-        text-shadow: none;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-}
-
-.navbar-user {
-    > li > a,
-    .btn-link {
-        text-decoration: none;
-        font-size: 1.4rem !important;
-        text-shadow: none;
-        padding: 30px 15px 15px 15px !important;
-        border: 0;     
-    }
+.navbar-collapse {
+    margin-left: -15px !important;
+    margin-right: -15px !important;
 }
 
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
-  color: white !important;
-  background-color: @base;
-  background-image: none;
+    color: white !important;
+    background-color: @base;
+    background-image: none;
 }
 
 #header-subscription {
