--- a/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
@@ -1,15 +1,8 @@
-﻿@using Mzayad.Web.Core.Identity
-@using Mzayad.Web.Extensions
+﻿@using Mzayad.Web.Extensions
 @if (Request.IsAuthenticated)
 {
     var routeValues = new {area = "", language = Html.Language()};
 
-    if (User.IsInRole(Role.Administrator.ToString()))
-    {
-        <li>
-            <a href="@(Url.Action("Index", "Auctions", new { area = "admin" }))"><i class="fa fa-cog fa-pad-right"></i>Admin</a>
-        </li>
-    }
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">@string.Format(Global.HelloFirstName, User.Identity.GetDisplayName())<i class="fa fa-caret-down fa-pad-left"></i></a>
         <ul class="dropdown-menu">
