set sponsored ribbon design to be consistent

--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -82,11 +82,13 @@
         color: #FFF;
         float: left;
         padding-right: 30px;
-        padding-left: 3px;
+        padding-left: 10px;
         width: 220px;
         white-space: nowrap;
         overflow: hidden;
+        font-size: 1.2rem;
         -moz-text-overflow: ellipsis;
         text-overflow: ellipsis;
+        text-align: left;
     }
 }
