--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -747,12 +747,14 @@ input[type="checkbox"].input-validation-error {
   color: #FFF;
   float: left;
   padding-right: 30px;
-  padding-left: 3px;
+  padding-left: 10px;
   width: 220px;
   white-space: nowrap;
   overflow: hidden;
+  font-size: 1.2rem;
   -moz-text-overflow: ellipsis;
   text-overflow: ellipsis;
+  text-align: left;
 }
 #dashboard-header {
   background-color: #262626;
