minor css updates

--- a/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
@@ -226,7 +226,7 @@
                         }
                     </td>
                     <td>@NameFormatter.GetFullName(log.ModifiedByUser.FirstName, log.ModifiedByUser.LastName)</td>
-                    <td>
+                    <td class="text-center">
                         @if (Model.UserId == log.ModifiedByUserId)
                         {
                             <span class="label label-default">PURCHASE</span>
