--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -14,6 +14,7 @@
 
         .panel-link {
             background-color: #33ACE0 !important;
+            color: white !important;
             margin-right: 5px !important;
         }
     </style>
