--- a/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
@@ -10,10 +10,16 @@
     ViewBag.Title = "User Details - " + NameFormatter.GetFullName(Model.FirstName, Model.LastName);
 }
 
-
-<ul class="link-list">
-    <li><a href="@Url.Action("Disable","Users", new {userId = Model.UserId})"><i class="fa fa-ban fa-pad-right"></i>Disable</a></li>
-</ul>
+@if (Model.IsLocked)
+{
+    <div class="alert alert-warning">This user's account is currently deleted or disabled.</div>
+}
+else
+{
+    <ul class="link-list">
+        <li><a href="@Url.Action("Disable","Users", new {userId = Model.UserId})"><i class="fa fa-ban fa-pad-right"></i>Disable</a></li>
+    </ul>
+}
 
 <h2>Summary</h2>
 
