--- a/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Users/Details.cshtml
@@ -12,7 +12,7 @@
 
 @if (Model.IsLocked)
 {
-    <div class="alert alert-warning">This user's account is currently deleted or disabled.</div>
+    <div class="alert alert-danger">This user's account is currently deleted or disabled.</div>
 }
 else
 {
