MZ-177 add accountant role migration; move admin menu to partial view; add admin menu to reports area

--- a/src/Mzayad.Web/Areas/Reports/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/Reports/Views/Shared/_Layout.cshtml
@@ -19,7 +19,12 @@
     </style>
 }
 
-@RenderBody()
+<div class="row">
+    @Html.Partial("_Layout_AdminMenu")
+    <div class="col-lg-9 col-md-8">
+        @RenderBody()
+    </div>
+</div>
 
 @section scripts {
     @Scripts.Render("~/js/jquery-ui")
