--- a/src/Mzayad.Web/Views/Shared/_Layout_AdminMenu.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_AdminMenu.cshtml
@@ -3,24 +3,24 @@
     <ul class="menu-list">
         @if (User.IsInRole(Role.Administrator.ToString()))
         {
-            <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-fw fa-pad-right fa-user"></i>Users</a></li>
-            <li><a href="@Url.Action("Index", "Orders")"><i class="fa fa-fw fa-pad-right fa-truck"></i>Orders</a></li>
-            <li><a href="@Url.Action("Index", "Auctions")"><i class="fa fa-fw fa-pad-right fa-gavel"></i>Auctions</a></li>
-            <li><a href="@Url.Action("Index", "PageManagement")"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Site Pages</a></li>
-            <li><a href="@Url.Action("Index", "Products")"><i class="fa fa-fw fa-pad-right fa-cube"></i>Products</a></li>
-            <li class="sub-menu-item"><a href="@Url.Action("Index", "Categories")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
-            <li class="sub-menu-item"><a href="@Url.Action("Index", "Specifications")"><i class="fa fa-fw fa-pad-right fa-reorder"></i>Specifications</a></li>
-            <li class="sub-menu-item"><a href="@Url.Action("Index", "Sponsors")"><i class="fa fa-fw fa-pad-right fa-money"></i>Sponsors</a></li>
+            <li><a href="@Url.Action("Index", "Users", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-user"></i>Users</a></li>
+            <li><a href="@Url.Action("Index", "Orders", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-truck"></i>Orders</a></li>
+            <li><a href="@Url.Action("Index", "Auctions", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-gavel"></i>Auctions</a></li>
+            <li><a href="@Url.Action("Index", "PageManagement", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Site Pages</a></li>
+            <li><a href="@Url.Action("Index", "Products", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-cube"></i>Products</a></li>
+            <li class="sub-menu-item"><a href="@Url.Action("Index", "Categories", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
+            <li class="sub-menu-item"><a href="@Url.Action("Index", "Specifications", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-reorder"></i>Specifications</a></li>
+            <li class="sub-menu-item"><a href="@Url.Action("Index", "Sponsors", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-money"></i>Sponsors</a></li>
             <li><a disabled href="#"><i class="fa fa-fw fa-pad-right fa-gamepad"></i>Gamification</a></li>
-            <li class="sub-menu-item"><a href="@Url.Action("Index", "Trophies")"><i class="fa fa-fw fa-pad-right fa-trophy"></i>Trophies</a></li>
-            <li class="sub-menu-item"><a href="@Url.Action("Index", "Levels")"><i class="fa fa-fw fa-pad-right fa-line-chart"></i>Levels</a></li>
-            <li class="sub-menu-item"><a href="@Url.Action("Index", "islamiccalendar")"><i class="fa fa-fw fa-pad-right fa-table"></i>Islamic Calendar</a></li>
-            <li class="sub-menu-item"><a href="@Url.Action("Index", "Avatars")"><i class="fa fa-fw fa-pad-right fa-rocket"></i>Avatars</a></li>
-            <li><a href="@Url.Action("Index", "Subscriptions")"><i class="fa fa-fw fa-pad-right fa-gift"></i>Subscriptions</a></li>
-            <li><a href="@Url.Action("Index", "SplashAds")"><i class="fa fa-fw fa-pad-right fa-mobile"></i>Mobile Splash Ads</a></li>
-            <li><a href="@Url.Action("EmailTemplates", "Settings")"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li>
-            <li><a href="@Url.Action("Index", "WishLists")"><i class="fa fa-fw fa-pad-right fa-star"></i>Wishlists</a></li>
-            <li><a href="@Url.Action("Index", "Docs")"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Development Docs</a></li>
+            <li class="sub-menu-item"><a href="@Url.Action("Index", "Trophies", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-trophy"></i>Trophies</a></li>
+            <li class="sub-menu-item"><a href="@Url.Action("Index", "Levels", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-line-chart"></i>Levels</a></li>
+            <li class="sub-menu-item"><a href="@Url.Action("Index", "islamiccalendar", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-table"></i>Islamic Calendar</a></li>
+            <li class="sub-menu-item"><a href="@Url.Action("Index", "Avatars", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-rocket"></i>Avatars</a></li>
+            <li><a href="@Url.Action("Index", "Subscriptions", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-gift"></i>Subscriptions</a></li>
+            <li><a href="@Url.Action("Index", "SplashAds", new { Area = "Admin" })"><i class="fa fa-fw fa-pad-right fa-mobile"></i>Mobile Splash Ads</a></li>
+            <li><a href="@Url.Action("EmailTemplates", "Settings", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li>
+            <li><a href="@Url.Action("Index", "WishLists", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-star"></i>Wishlists</a></li>
+            <li><a href="@Url.Action("Index", "Docs", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Development Docs</a></li>
         }
         <li><a disabled href="@Url.Action("Index", "Reports")"><i class="fa fa-fw fa-pad-right fa-bar-chart"></i>Reports</a></li>
         <li class="sub-menu-item"><a href="@Url.Action("Index", "Products", new {area = "Reports"})"><i class="fa fa-fw fa-pad-right fa-table"></i>Products by Date</a></li>
