--- a/src/Mzayad.Web/Views/Shared/EditorTemplates/Address_KW.cshtml
+++ b/src/Mzayad.Web/Views/Shared/EditorTemplates/Address_KW.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.AddressLine2,Global.Street).Required()
+    @Html.LabelFor(m => m.AddressLine2, Global.Street).Required()
     @Html.TextBoxFor(m => m.AddressLine2, new { @class = "form-control", data_val = "true", data_val_required = "*" })
     @Html.ValidationMessageFor(m => m.AddressLine2, Global.StreetRequiredErrorMessage)
 </div>
@@ -28,4 +28,14 @@
     @Html.LabelFor(m => m.AddressLine3, Global.Building).Required()
     @Html.TextBoxFor(m => m.AddressLine3, new { @class = "form-control", data_val = "true", data_val_required = "*" })
     @Html.ValidationMessageFor(m => m.AddressLine3, Global.BuildingRequiredErrorMessage)
+</div>
+
+<div class="form-group">
+    @Html.LabelFor(m => m.Floor, Global.Floor)
+    @Html.TextBoxFor(m => m.Floor, new { @class = "form-control" })
+</div>
+
+<div class="form-group">
+    @Html.LabelFor(m => m.FlatNumber, Global.FlatNumber)
+    @Html.TextBoxFor(m => m.FlatNumber, new { @class = "form-control" })
 </div>
