--- a/src/Mzayad.Web/Views/Account/Register.cshtml
+++ b/src/Mzayad.Web/Views/Account/Register.cshtml
@@ -26,6 +26,10 @@
         .normalImg {
             cursor: pointer;
         }
+
+        .radio label:last-child {
+            margin-left: 100px;
+        }
     </style>
 }
 
@@ -45,6 +49,14 @@
                     @Html.LabelFor(m => m.LastName, Global.LastName).Required()
                     @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autocorrect = "off", spellcheck = "false" })
                     @Html.ValidationMessageFor(m => m.LastName, Global.LastNameRequiredErrorMessage)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(i => i.Gender, Global.Gender)
+                    @Html.RadioButtonListHorizontally(Html.IdFor(i=>i.Gender).ToString(), Model.GenderList)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(i => i.Birthdate, Global.Birthdate)
+                    @Html.EditorFor(i => i.Birthdate, "DateTime")
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.UserName, Global.UserName).Required()
@@ -83,9 +95,14 @@
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.PhoneNumber, "Phone Number").Required()
-                    <div class="form-inline">
-                        @Html.TextBoxFor(m => m.PhoneCountryCode, new { @class = "form-control form-control-sm", @type = "tel", maxlength = 4 })
-                        @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", @type = "tel" })
+                    <div class="row">
+                        <div class="col-md-3">
+                            @Html.TextBoxFor(m => m.PhoneCountryCode, new { @class = "form-control", @type = "tel", maxlength = 4 })
+                        </div>
+                        <div class="col-md-9">
+                            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", @type = "tel" })
+                        </div>
+
                     </div>
                     @Html.ValidationMessageFor(m => m.PhoneNumber, "Please enter a valid phone number.")
                 </div>
@@ -104,7 +121,7 @@
                             </div>
                         }
 
-                        @Html.HiddenFor(i => i.SelectedAvatar,new {@class="avatar"})
+                        @Html.HiddenFor(i => i.SelectedAvatar, new { @class = "avatar" })
                     </div>
                     @Html.ValidationMessageFor(i => i.SelectedAvatar, Global.SelectAvatarErrorMessage)
                 </div>
@@ -132,6 +149,13 @@
         (function($) {
 
             $(function() {
+
+                $(".date-picker").datepicker({
+                    changeMonth: true,
+                    changeYear: true,
+                    dateFormat: "dd/mm/yy"
+                });
+
                 bindEvents();
                 initAutocomplete();
 
