--- a/src/Mzayad.Web/Views/User/EditAccount.cshtml
+++ b/src/Mzayad.Web/Views/User/EditAccount.cshtml
@@ -6,7 +6,13 @@
 }
 @section styles {
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-    <link rel="stylesheet" href="/content/flags/flags.css" />
+    <link rel="stylesheet" href="/content/flags/flags.css"/>
+
+    <style>
+        .radio label:last-child {
+            margin-left: 100px;
+        }
+    </style>
 }
 
 <div class="row">
@@ -23,8 +29,16 @@
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.LastName, Global.LastName).Required()
-                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autocorrect = "off", spellcheck = "false" })
+                    @Html.TextBoxFor(m => m.LastName, new {@class = "form-control", autocorrect = "off", spellcheck = "false"})
                     @Html.ValidationMessageFor(m => m.LastName, Global.LastNameRequiredErrorMessage)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(i => i.Gender, Global.Gender)
+                    @Html.RadioButtonListHorizontally(Html.IdFor(i => i.Gender).ToString(), Model.GenderList)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(i => i.Birthdate, Global.Birthdate)
+                    @Html.EditorFor(i => i.Birthdate, "DateTime")
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.Email, Global.Email).Required()
@@ -61,6 +75,12 @@
     <script src="~/scripts/address.js"></script>
     <script>
         (function($) {
+
+            $(".date-picker").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                dateFormat: "dd/mm/yy"
+            });
 
             $(function() {
                 initAutocomplete();
