MZ-184 change sender email address; update all content that says mzayad to zeedli

--- a/src/Mzayad.Web/Areas/admin/Views/SplashAds/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/SplashAds/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Splash Ads";
 }
 
-<p>Splash ads appear when users launch the native mobile Mzayad apps. The frequency that each ad appears is based on its weight relative to the sum of all ad weights. To increase the frequency that an ad appears you would increase its weight.</p>
+<p>Splash ads appear when users launch the native mobile Zeedli apps. The frequency that each ad appears is based on its weight relative to the sum of all ad weights. To increase the frequency that an ad appears you would increase its weight.</p>
 
 <ul class="link-list">
     <li>@Html.ActionLink("Upload Splash Ad", "Upload")</li>
