--- a/src/Mzayad.Web/Views/Shared/EmailTemplate.cshtml
+++ b/src/Mzayad.Web/Views/Shared/EmailTemplate.cshtml
@@ -109,7 +109,7 @@
                         <tr>
                             <td style="padding: 15px; font-family: @fontFamily;">
                                 @Html.Raw(Model.Message)
-                                <p>Mzayad Team</p>
+                                <p>Zeedli Team</p>
                             </td>
                         </tr>
                     </table>
