MZ-188 fix tropy image

--- a/src/Mzayad.Web/Views/User/Trophies.cshtml
+++ b/src/Mzayad.Web/Views/User/Trophies.cshtml
@@ -45,7 +45,7 @@
                     @{
                         var styleclass = item.Earned ? "img-responsive gray" : "img-responsive";
                     }
-                    <img class="@styleclass" src="@item.Trophy.IconUrl" alt="@item.Trophy.Name" />
+                    <img class="@styleclass" src="@item.IconUrl" alt="@item.TrophyName" />
                 </td>
                 <td>
                     <p>@item.TrophyName</p>
