MZ-193 add country list to auction entity. update admin auction ui

--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/Create.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/Create.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Create Auction";
 }
+@section styles
+{
+    <link rel="stylesheet" href="/content/flags/flags.css" />
+}
 
 @Html.Partial("_AddEditAuction")
 
