--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/_AddEditAuction.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/_AddEditAuction.cshtml
@@ -142,6 +142,21 @@
                     </div>
                 </div>
             </section>
+            <section>
+                @Html.LabelFor(i => i.Auction.CountryList)
+                <div class="row">
+                    @foreach (SelectListItem country in Model.GccCountryList)
+                    {
+                        <div class="col-md-6">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"  @(country.Selected ? "checked='checked'" : "") name="countryList" value="@country.Value" /> <i class="flag flag-@country.Value.ToLowerInvariant()"></i> @country.Text
+                                </label>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </section>
 
             <section class="form-buttons">
                 @Html.HiddenFor(i=>i.Auction.CreatedByUserId)
